[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/terrain/terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/scene/menu/menu.gd" type="Script" id=2]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=5]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="terrain" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about_panel" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.439216 )
margin_right = 680.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/about_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 673.0
margin_bottom = 593.0

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/about_panel/VBoxContainer2"]
margin_right = 666.0
margin_bottom = 52.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Colony"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/about_panel/VBoxContainer2"]
margin_top = 56.0
margin_right = 666.0
margin_bottom = 139.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Conquest - explore - war
"
align = 1
valign = 1

[node name="Label3" type="Label" parent="CanvasLayer/HBoxContainer/about_panel/VBoxContainer2"]
margin_top = 143.0
margin_right = 666.0
margin_bottom = 388.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
text = "game about explore
and conquest,
with global map inspire from
mount and blade 
and battle inspire from
total war

made by renosyah"
align = 1
valign = 1

[node name="title_panel" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/title_panel"]
margin_right = 510.0
margin_bottom = 600.0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/title_panel/VBoxContainer"]
margin_top = 252.0
margin_right = 510.0
margin_bottom = 304.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Colony"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/title_panel/VBoxContainer"]
margin_top = 308.0
margin_right = 510.0
margin_bottom = 348.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Conquest - explore - war"
align = 1
valign = 1

[node name="menu_panel" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/menu_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 593.0

[node name="campaign" type="Button" parent="CanvasLayer/HBoxContainer/menu_panel/VBoxContainer"]
margin_right = 496.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "New Campaign"

[node name="quick_battle" type="Button" parent="CanvasLayer/HBoxContainer/menu_panel/VBoxContainer"]
margin_top = 104.0
margin_right = 496.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 3 )
text = "Quick Battle"

[node name="about" type="Button" parent="CanvasLayer/HBoxContainer/menu_panel/VBoxContainer"]
margin_top = 208.0
margin_right = 496.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 3 )
text = "About"

[node name="quit" type="Button" parent="CanvasLayer/HBoxContainer/menu_panel/VBoxContainer"]
margin_top = 506.0
margin_right = 496.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 10
custom_fonts/font = ExtResource( 3 )
text = "Quit"
[connection signal="pressed" from="CanvasLayer/HBoxContainer/menu_panel/VBoxContainer/quick_battle" to="." method="_on_quick_battle_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/menu_panel/VBoxContainer/about" to="." method="_on_about_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/menu_panel/VBoxContainer/quit" to="." method="_on_quit_pressed"]
